# intro_to_nlp

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01-basic-ml-classification-tabular-data.ipynb  02-basic-sentiment-classification-dictionary.ipynb  03-basic-sentiment-classification-supervised-classification.ipynb  04-basic-sentiment-classification-supervised-classification-embeddings.ipynb  05-transformers-text-classification.ipynb  06-text-clustering-with-embeddings.ipynb  07-gpt-openai-zero-shot-few-shot-learning.ipynb
notebooks/afinn/: AFINN-README.txt  afinn-111.csv
notebooks/custom_model/: config.json
notebooks/notebooks_w_solutions/: 02-basic-sentiment-classification-dictionary.ipynb  03-basic-sentiment-classification-supervised-classification.ipynb  04-basic-sentiment-classification-supervised-classification-embeddings.ipynb  05-transformers-text-classification.ipynb  06-text-clustering-with-embeddings.ipynb  07-gpt-openai-zero-shot-few-shot-learning-Copy1.ipynb
